--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="text-gray-200 text-lg font-light">
             Haidar's 25th Birthday Project
         </div>
-        <img src="./img/haidar_pose1.png" alt="Haidar" class="mx-auto w-1/4 opacity-80 mb-2">
+        <img src="./img/haidar.png" alt="Haidar" class="mx-auto w-1/4 opacity-80 mb-2">
         <!-- Subtitle -->
         <div class="text-gray-200 font-bold text-lg">
             Haidar (@Nyimakajja)
